trying to fix the alignments

--- a/index.css
+++ b/index.css
@@ -13,10 +13,6 @@ body {
     font-size: 30px;
 }
 
-#main {
-
-}
-
 .input {
     margin-left: auto;
     margin-right: auto;
@@ -43,9 +39,16 @@ body {
 }
 
 #chatbot {
-    vertical-align: bottom;
+    position: absolute;
+    bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     background-color: green;
     height: 90vh;
+}
+
+.chatdiv {
+
 }
 
 .output {
